--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,22 +18,22 @@ env:
 jobs:
   # Cancel previous workflow runs.
   cancel:
-    uses: lf-lang/lingua-franca/.github/workflows/cancel.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/cancel.yml@master
 
   # Test the Maven build.
   build:
-    uses: lf-lang/lingua-franca/.github/workflows/build.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/build.yml@master
     needs: cancel
 
   # Run the unit tests.
   unit-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/unit-tests.yml@master
     needs: cancel
 
   # Run tests for the standalone compiler.
   # TODO: Change this back to master branch once merged!
   cli-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@master
     needs: cancel
 
   # Run the C benchmark tests.
@@ -45,22 +45,22 @@ jobs:
 
   # Run tests for Eclipse.
   eclipse-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/eclipse-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/eclipse-tests.yml@master
     needs: cancel
 
   # Run language server tests.
   lsp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/lsp-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/lsp-tests.yml@master
     needs: cancel
 
   # Run the C integration tests.
   c-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@master
     needs: cancel
 
   # Run the CCpp integration tests.
   ccpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/c-tests.yml@master
     with:
       use-cpp: true
     needs: cancel
@@ -74,22 +74,22 @@ jobs:
 
   # Run the C++ integration tests.
   cpp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cpp-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/cpp-tests.yml@master
     needs: cancel
 
   # Run the C++ integration tests on ROS2.
   cpp-ros2-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cpp-ros2-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/cpp-ros2-tests.yml@master
     needs: cancel
 
   # Run the Python integration tests.
   py-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@master
     needs: cancel
 
   # Run the Rust integration tests.
   rs-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/rs-tests.yml@master
     needs: cancel
 
   # Run the Rust benchmark tests.
@@ -101,10 +101,10 @@ jobs:
 
   # Run the TypeScript integration tests.
   ts-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@master
     needs: cancel
 
   # Run the serialization tests
   serialization-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@formatting-for-dev-workflow
+    uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@master
     needs: cancel
